--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </ul>
                         <form class="d-flex" role="search">
                               <input class="form-control me-2" type="search" placeholder="Search for any previous message" aria-label="Search">
-                              <button class="btn btn-outline-success" type="submit">Search</button>
+                              <button class="btn btn-outline-light" type="submit"><b>Search</b></button>
                         </form>
                   </div>
             </div>
@@ -66,13 +66,13 @@
                   You : WASSUP
             </div>
             <div class="message left">
-                  ed ut perspiciatis unde omnis iste natus error sit voluptatem accusanti
+                  Future Husband : MARJAA KUTTI !
             </div>
       </div>
       <div class="send">
             <form action="" id="send-container">
                   <input type="text" name="messageInput" id="messageInput">
-                  <button style="background: transparent;border: transparent;"><img class="send-message-button" src="/ChatMates/ImagesRequired/send message.png"></button>
+                  <button style="background: transparent;border: transparent;"><img class="send-message-button" src="ImagesRequired/send message.png"></button>
             </form>
       </div>
 </body>
