--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
                   </form>
             </div>
       </div>
-      
+      <div class="footer-div">
+
+      </div>
 </body>
 </html>
