--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
 
 <body>
+      
       <!-- Heading section -->
       <div class="heading-div">
             <div class="brand-div">
                   <img type="button" class="chatmates-logo" src="ImagesRequired/chatmates image.jpg">
                   <a class="chatmates-brand-name" href="index.html">ChatMates</a>
             </div>
-
             <div class="icons-div">
                   <img class="information-icon" src="ImagesRequired/information_icon.jpg">
                   <img class="video-icon" src="ImagesRequired/video_call.png">
@@ -48,13 +48,11 @@
             </div>
       </div>
 
-      
-  
       <div class="container">
-
+            <div class="heading" style="display: flex;justify-content: center;">
+                  <h1 style="font-size: 3rem;position: inherit;">Welcome To ChatMates !!!</h1>
+            </div>
       </div>
-
-
 
       <div id="send-box">
             <div class="send">
@@ -63,9 +61,6 @@
                         <button type="submit" style="background: transparent;border: transparent;"><img class="send-message-button" src="ImagesRequired/send message.png"></button>
                   </form>
             </div>
-      </div>
-      <div class="footer-div">
-
       </div>
 </body>
 </html>
